--- a/assets/scss/sections/blog/_latest-blog.scss
+++ b/assets/scss/sections/blog/_latest-blog.scss
@@ -3,6 +3,9 @@
 }
 .latest-blog-content{
     margin-top: 50px;
+    .pagination{
+        margin-top: 30px;
+    }
 }
 .blog-card{
     background: color(whiteColor);
